--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {},
   "dependencies": {
     "knex": "0.21.18",
-    "pg": "^7.18.2",
+    "pg": "^8.0.3",
+    "objection": "^2.1.3",
     "pg-connection-string": "^2.5.0",
     "strapi": "3.6.8",
     "strapi-admin": "3.6.8",
